--- a/views/map.pug
+++ b/views/map.pug
@@ -2,9 +2,9 @@ extends base
 
 block content
   link(rel='stylesheet' href='/style/map.css')
-  link(rel='stylesheet' href='https://unpkg.com/leaflet@1.9.4/dist/leaflet.css' integrity='sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=' crossorigin='')
-  script(src='https://unpkg.com/leaflet@1.9.4/dist/leaflet.js' integrity='sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=' crossorigin='')
-
+  script(src='/scripts/leaflet/dist/leaflet.js')
+  link(rel='stylesheet', href='/scripts/leaflet/dist/leaflet.css')
+  
   div.parent-map
     .search-select-btn
       button.searchForRents.select-button.button1
