--- a/views/base.pug
+++ b/views/base.pug
@@ -24,6 +24,7 @@ html(lang='fa' dir='rtl')
     script(src='/scripts/@popperjs/core/dist/umd/popper.min.js')
     script(src='/scripts/bootstrap/dist/js/bootstrap.min.js')
     script(src='/scripts/axios/dist/axios.min.js')
+    script(src='/scripts/jalali-moment/dist/jalali-moment.browser.js')
     
     //- script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js' integrity='sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r' crossorigin='anonymous')
     //- script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js' integrity='sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa' crossorigin='anonymous')
